fix icon spacing

--- a/css/style.css
+++ b/css/style.css
@@ -505,7 +505,7 @@ header.mdl-layout__header {
   min-height: 35px!important;
   z-index: inherit!important;
 }
-.mdl-layout__drawer>.mdl-layout__title {/*  letter-spacing: .2rem!important;*/line-height: 54px!important;margin-left: 35px;font-weight: 100;}
+.mdl-layout__drawer>.mdl-layout__title {/*  letter-spacing: .2rem!important;*/line-height: 54px!important;margin-left: 15px;font-weight: 100;}
 
 /*This is a strange thing that obscures the #map on  iOS*/
 
@@ -525,7 +525,7 @@ overflow-y: hidden;
 .drawer-icon {
   width: 20px;
   position: absolute!important;
-  margin-top: 21px!important;
+  margin-top: 16px!important;
   margin-left: 16px!important;
 }
 .mdl-navigation {
